# airbyte

./: .airbyte_ci_ignore  .bumpversion.cfg  .dccache  .dockerignore  .editorconfig  .env  .env.data_plane  .env.dev  .env.podman  .env.prod  .eslintrc.js  .gitbook.yaml  .gitignore  .gitmodules  .java-version  .markdownlint.jsonc  .markdownlintignore  .pip-version  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.js  .project  .python-version  .readthedocs.yaml  .secrets  .shellcheckrc  .sops.yaml  .tool-versions  1  8cee7c4a-8047-4cb9-a86d-f7fd87b2d1f8.json  ABALUSTRE_CONNECTORS.md  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DATETIME_PARSING_EXAMPLES.md  DUMMY_TEST.md  Dockerfile  (+331 more)
airbyte-cdk/python/: .bumpversion.cfg  .coveragerc  .gitignore  .mypy.ini  <MagicMock name='mock.cache_filename' id='4387592224'>  <MagicMock name='mock.cache_filename' id='4722183184'>  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  assemble.sh  build.gradle  cache_http_stream.sqlite  cache_http_stream.yml  cache_http_stream_with_slices.sqlite  cache_http_stream_with_slices.yml  cdk-migrations.md  check.sh  dbml-erd.py  file_based_build_customization.py  gradle.properties  list_new_reqs.sh  list_reqs.sh  local-cdk-requirements.txt  mypy.ini  pyproject.toml  pyproject.toml-bak  pyrightconfig.json  pytest.ini  regression.py  run_compare.py  schema_relationships.json  settings.gradle  setup.py  sphinx-docs.md  type_check_and_test.sh
airbyte-cdk/python/airbyte_cdk/: __init__.py  bubble_sort.py  config_observation.py  connector.py  entrypoint.py  exception_handler.py  log_filter.py  logger.py  secure_logger.py
airbyte-cdk/python/code-generator/: Dockerfile
airbyte-cdk/python/connector_builder/: README.md  connector_builder_handler.py  connector_builder_source.py  main.py  message_grouper.py  models.py
airbyte-cdk/python/docs/: CONTRIBUTING.md  generate.py  legacy_cdk_migration.md
airbyte-cdk/python/htmlcov/: airbyte_cdk___init___py.html  airbyte_cdk_connector_py.html  airbyte_cdk_destinations___init___py.html  airbyte_cdk_destinations_destination_py.html  airbyte_cdk_entrypoint_py.html  airbyte_cdk_logger_py.html  airbyte_cdk_models___init___py.html  airbyte_cdk_models_airbyte_protocol_py.html  airbyte_cdk_sources___init___py.html  airbyte_cdk_sources_abstract_source_py.html  airbyte_cdk_sources_deprecated___init___py.html  airbyte_cdk_sources_deprecated_base_source_py.html  airbyte_cdk_sources_deprecated_client_py.html  airbyte_cdk_sources_singer___init___py.html  airbyte_cdk_sources_singer_singer_helpers_py.html  airbyte_cdk_sources_singer_source_py.html  airbyte_cdk_sources_source_py.html  airbyte_cdk_sources_streams___init___py.html  airbyte_cdk_sources_streams_core_py.html  airbyte_cdk_sources_streams_http___init___py.html  airbyte_cdk_sources_streams_http_auth___init___py.html  airbyte_cdk_sources_streams_http_auth_core_py.html  airbyte_cdk_sources_streams_http_auth_oauth_py.html  airbyte_cdk_sources_streams_http_auth_token_py.html  airbyte_cdk_sources_streams_http_exceptions_py.html  airbyte_cdk_sources_streams_http_http_py.html  airbyte_cdk_sources_streams_http_rate_limiting_py.html  airbyte_cdk_sources_streams_http_requests_native_auth___init___py.html  airbyte_cdk_sources_streams_http_requests_native_auth_oauth_py.html  airbyte_cdk_sources_streams_http_requests_native_auth_token_py.html  airbyte_cdk_sources_utils___init___py.html  airbyte_cdk_sources_utils_casing_py.html  airbyte_cdk_sources_utils_catalog_helpers_py.html  airbyte_cdk_sources_utils_schema_helpers_py.html  airbyte_cdk_sources_utils_transform_py.html  index.html  status.json
airbyte-cdk/python/new_reqs/: dev_install.txt  file-based_install.txt
airbyte-cdk/python/old_reqs/: base_install.txt  dev_install.txt  file-based_install.txt  sphinx-docs_install.txt  vector-db-based_install.txt
airbyte-cdk/python/reference_docs/: Makefile  generate_rst_schema.py  make.bat
airbyte-cdk/python/source-declarative-manifest/: README.md  main.py
airbyte-cdk/python/source_declarative_manifest/: README.md  main.py  pokeapi_config.json
airbyte-cdk/python/unit_tests/: __init__.py  cache_http_stream.sqlite  cache_http_stream_with_slices.sqlite  conftest.py  sample_test.py  test.py  test_bubble_sort.py  test_config_observation.py  test_connector.py  test_counter.py  test_entrypoint.py  test_exception_handler.py  test_logger.py  test_secure_logger.py  test_source_declarative_manifest.py
airbyte-ci/ci/ci_connector_ops/: pyproject.toml  setup.py
airbyte-ci/connectors/auto_merge/: README.md  pyproject.toml
airbyte-lib/: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  build-docs.sh  build.gradle  docs.py  pyproject.toml
airbyte-lib/airbyte_lib/: __init__.py  _executor.py  _processors.py  _util.py  cache.py  config.py  connection.py  datasets.py  exceptions.py  executor.py  factories.py  processors.py  progress.py  registry.py  results.py  secrets.py  source.py  strategies.py  sync.py  sync_result.py  sync_results.py  telemetry.py  types.py  validate.py  version.py
airbyte-lib/docs/: frame.html.jinja2  frame.html.jinja2.disabled  generate.py
airbyte-lib/examples/: Demo_Workbook.ipynb  README.md  poetry.toml  pyproject.toml  run_faker.py  run_github.py  run_pokeapi.py  run_snowflake_faker.py  run_spacex.py  run_spacex_docker.py  run_stripe.py  run_test_source.py  run_test_source_single_stream.py
airbyte-lib/integration_tests/: test_integration.py
airbyte-lib/pdoc_docs/: airbyte_lib.html  search.js
airbyte-lib/test/: __init__.py
airbyte-lib/tests/: conftest.py  test_integration.py  test_source.py
airbyte-to-flow/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
airbyte-to-flow/src/: apis.rs  connector_runner.rs  errors.rs  main.rs
gen_data/: gen_data.py  pyproject.toml
raw_table_experiments/gen_data/: compose_existing_files.py  gen_data.py  gen_data_compose.py  pyproject.toml
tools/schema_generator/: README.md  pyproject.toml  setup.py
tools/yoink/: .gitignore  README.md  pyproject.toml  pyrightconfig.json
(+59879 files in other folders)
