[package]
name = "airbyte-to-flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doc = { git = "https://github.com/estuary/flow", version = "0.0.0" }
flow_cli_common = { git = "https://github.com/estuary/flow" }
proto-flow = { git = "https://github.com/estuary/flow", version = "0.0.0" }
json = { git = "https://github.com/estuary/flow", version = "0.0.0" }

json-patch = "*"
validator = { version = "*", features = ["derive"] }
anyhow = "*"
async-trait = "*"
bytelines = "*"
byteorder = "*"
bytes = "*"
clap = { version = "^3", features = ["derive"] }
futures = "*"
futures-core = "*"
futures-util = "*"
prost = "*"
schemars = "*"
serde = { version = "*", features = ["derive"]}
serde_json = { version = "*", features = ["raw_value"]}
structopt = "*"
strum_macros = "*"
strum = { version = "0.24.1", features = ["derive"] }
tempfile = "*"
thiserror = "*"
tracing = "*"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "*", features = ["io"] }
lazy_static = "1.4.0"
regex = "1.7.1"

[dev-dependencies]
insta = "*"
