[tool.poetry]
name = "airbyte-lib-demo"
version = "0.1.0"
description = "Demo of AirbyteLib developer experience (DX)"
authors = ["Airbyte <contact@airbyte.io>"]
license = "ELv2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
airbyte-lib = {path = "..", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
